[gd_scene load_steps=2 format=3 uid="uid://brgyc1ncvpiuw"]

[ext_resource type="Script" path="res://scenes/settings/circle_ui_section.gd" id="1_6dwy2"]

[node name="CircleUISection" type="VBoxContainer"]
script = ExtResource("1_6dwy2")

[node name="SectionHeader" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="SectionHeader"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Circle"

[node name="SectionToggle" type="CheckButton" parent="SectionHeader"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
button_pressed = true

[node name="SectionBody" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8

[node name="VBoxContainer" type="VBoxContainer" parent="SectionBody"]
layout_mode = 2

[node name="Radius" type="HBoxContainer" parent="SectionBody/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SectionBody/VBoxContainer/Radius"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 10
text = "Radius"

[node name="RadiusSlider" type="HSlider" parent="SectionBody/VBoxContainer/Radius"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
rounded = true

[node name="Color" type="HBoxContainer" parent="SectionBody/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SectionBody/VBoxContainer/Color"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 10
text = "Line color"

[node name="LineColorButton" type="ColorPickerButton" parent="SectionBody/VBoxContainer/Color"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0

[node name="DoubleLine" type="HBoxContainer" parent="SectionBody/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SectionBody/VBoxContainer/DoubleLine"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 10
text = "Double line"

[node name="DoubleLineToggle" type="CheckButton" parent="SectionBody/VBoxContainer/DoubleLine"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
button_pressed = true

[node name="DoubleLineSpacing" type="HBoxContainer" parent="SectionBody/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SectionBody/VBoxContainer/DoubleLineSpacing"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 10
text = "Double line spacing"

[node name="DoubleLineSpacingSlider" type="HSlider" parent="SectionBody/VBoxContainer/DoubleLineSpacing"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
rounded = true

[node name="Rings" type="VBoxContainer" parent="SectionBody/VBoxContainer"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="SectionBody/VBoxContainer/Rings"]
layout_mode = 2

[node name="Label" type="Label" parent="SectionBody/VBoxContainer/Rings/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "Rings"

[node name="RingsToggle" type="CheckButton" parent="SectionBody/VBoxContainer/Rings/Header"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
button_pressed = true

[node name="Body" type="MarginContainer" parent="SectionBody/VBoxContainer/Rings"]
layout_mode = 2
theme_override_constants/margin_left = 8

[node name="VBoxContainer" type="VBoxContainer" parent="SectionBody/VBoxContainer/Rings/Body"]
layout_mode = 2

[node name="Number" type="HBoxContainer" parent="SectionBody/VBoxContainer/Rings/Body/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SectionBody/VBoxContainer/Rings/Body/VBoxContainer/Number"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 10
text = "Number"

[node name="RingsNumberSlider" type="HSlider" parent="SectionBody/VBoxContainer/Rings/Body/VBoxContainer/Number"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
min_value = 1.0
value = 1.0
rounded = true

[node name="Radius" type="HBoxContainer" parent="SectionBody/VBoxContainer/Rings/Body/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SectionBody/VBoxContainer/Rings/Body/VBoxContainer/Radius"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 10
text = "Radius"

[node name="RingsRadiusSlider" type="HSlider" parent="SectionBody/VBoxContainer/Rings/Body/VBoxContainer/Radius"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
rounded = true

[node name="Offset" type="HBoxContainer" parent="SectionBody/VBoxContainer/Rings/Body/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SectionBody/VBoxContainer/Rings/Body/VBoxContainer/Offset"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 10
text = "Offset"

[node name="RingsOffsetSlider" type="HSlider" parent="SectionBody/VBoxContainer/Rings/Body/VBoxContainer/Offset"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
rounded = true

[connection signal="double_line_spacing_top" from="." to="." method="_on_double_line_spacing_top"]
[connection signal="double_line_toggle_top" from="." to="." method="_on_double_line_toggle_top"]
[connection signal="line_color_top" from="." to="." method="_on_line_color_top"]
[connection signal="radius_slider_top" from="." to="." method="_on_radius_slider_top"]
[connection signal="rings_number_top" from="." to="." method="_on_rings_number_top"]
[connection signal="rings_offset_top" from="." to="." method="_on_rings_offset_top"]
[connection signal="rings_radius_top" from="." to="." method="_on_rings_radius_top"]
[connection signal="rings_toggle_top" from="." to="." method="_on_rings_toggle_top"]
[connection signal="section_toggle_top" from="." to="." method="_on_section_toggle_top"]
[connection signal="toggled" from="SectionHeader/SectionToggle" to="." method="_on_section_toggle_toggled"]
[connection signal="value_changed" from="SectionBody/VBoxContainer/Radius/RadiusSlider" to="." method="_on_radius_slider_value_changed"]
[connection signal="color_changed" from="SectionBody/VBoxContainer/Color/LineColorButton" to="." method="_on_line_color_button_color_changed"]
[connection signal="toggled" from="SectionBody/VBoxContainer/DoubleLine/DoubleLineToggle" to="." method="_on_double_line_toggle_toggled"]
[connection signal="value_changed" from="SectionBody/VBoxContainer/DoubleLineSpacing/DoubleLineSpacingSlider" to="." method="_on_double_line_spacing_slider_value_changed"]
[connection signal="toggled" from="SectionBody/VBoxContainer/Rings/Header/RingsToggle" to="." method="_on_rings_toggle_toggled"]
[connection signal="value_changed" from="SectionBody/VBoxContainer/Rings/Body/VBoxContainer/Number/RingsNumberSlider" to="." method="_on_rings_number_slider_value_changed"]
[connection signal="value_changed" from="SectionBody/VBoxContainer/Rings/Body/VBoxContainer/Radius/RingsRadiusSlider" to="." method="_on_rings_radius_slider_value_changed"]
[connection signal="value_changed" from="SectionBody/VBoxContainer/Rings/Body/VBoxContainer/Offset/RingsOffsetSlider" to="." method="_on_rings_offset_slider_value_changed"]
